<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/note_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.0dip"
        android:hint="@string/etnameinit" />


    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="280.0dip"
        android:layout_below="@id/note_name"
        android:layout_marginTop="15.0dip"
        android:gravity="top"
        android:hint="@string/etmaininit" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/note_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnSave" />

        <Button
            android:id="@+id/btnClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnClean" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnReturn" />

        <Button
            android:id="@+id/btnExit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/btnExit" />

    </LinearLayout>


</RelativeLayout>