<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_Content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btnSearch" />

            <Button
                android:id="@+id/btnAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btnAll" />
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="320.0dip" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnAddNewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/addText" />

        <Button
            android:id="@+id/btnAddNewVoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/addVoice" />

        <Button
            android:id="@+id/btnAddNewVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/addVideo" />

        <Button
            android:id="@+id/btnReturn3"
            android:layout_width="30dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/myreturn" />

    </LinearLayout>
</LinearLayout>